@@ -32,6 +32,7 @@ setting since version 1.2.0. If you have it on, turn it *off* if you can.
 * (bug 5646) Compare for identical types in wfElement()
 * Fix for concurrency problem in job queue (image description page invalidation)
 * (bug 5497) regeression in HTML normalization in 1.6 (unclosed <li>,<dd>,<dt>)
+* (bug 5709) Allow customisation of separator for categories
 
 
 == MediaWiki 1.6.3 ==
